--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.588.0",
+    "@aws-sdk/util-utf8-node": "^3.259.0",
     "sharp": "^0.33.4"
   }
 }
