--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@serverless/compose": "^1.3.0",
     "@serverless/typescript": "^3.38.0",
+    "@silvermine/serverless-plugin-cloudfront-lambda-edge": "^2.2.3",
     "@types/aws-lambda": "^8.10.138",
     "@types/node": "^20.13.0",
     "esbuild": "^0.20.2",
